name:                nkaretnikov-github-io
version:             0.1.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Nikita Karetnikov
maintainer:          nikita@karetnikov.org
-- copyright:           
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable nkaretnikov-github-io
  main-is:             Main.hs
  build-depends:       base >=4.8 && <4.9,
                       hakyll
  -- hs-source-dirs:      
  default-language:    Haskell2010
